--- a/launchpad/plugin_quickbuttons/changelog
+++ b/launchpad/plugin_quickbuttons/changelog
@@ -1,5 +1,5 @@
 exaile-plugin-quickbuttons (<#VERSION#>) bionic; urgency=low
 
-  * Initial release starting with Exaile 4.1.1
+  * Initial release starting with 0.1
 
  -- js <exaile-users@googlegroups.com>  <#TIMESTAMP#>
