--- a/launchpad/plugin_quickbuttons/install
+++ b/launchpad/plugin_quickbuttons/install
@@ -1,2 +1,4 @@
-__init__.py usr/share/exaile/plugins/quickbuttons
 PLUGININFO usr/share/exaile/plugins/quickbuttons
+__init__.py usr/share/exaile/plugins/quickbuttons
+qb_prefs.py usr/share/exaile/plugins/quickbuttons
+qb_prefs.ui usr/share/exaile/plugins/quickbuttons
