--- a/launchpad/current_head/changelog
+++ b/launchpad/current_head/changelog
@@ -1,6 +1,6 @@
-<#PKG_NAME#> (<#VERSION#>) bionic; urgency=low
+<#PKG_NAME#> (<#VERSION#>) <#UBUNTU_RELEASE#>; urgency=low
 
   * (almost) daily release of the current head
-  * Bugfix Unable to sort a playlist with rating value
+  * Github issues 766, 768, 769, 779
 
  -- js <exaile-users@googlegroups.com>  <#TIMESTAMP#>
