--- a/launchpad/current_stable/changelog
+++ b/launchpad/current_stable/changelog
@@ -1,5 +1,5 @@
 exaile (<#VERSION#>) bionic; urgency=low
 
-  * Initial release starting with Exaile 4.1.1
+  * Beta release for Exaile 4.1.2
 
  -- js <exaile-users@googlegroups.com>  <#TIMESTAMP#>
