--- a/debian/current_stable/changelog
+++ b/debian/current_stable/changelog
@@ -1,5 +1,5 @@
 exaile (<#VERSION#>) unstable; urgency=low
 
-  * Beta release for Exaile 4.1.2 (Closes: #785897)
+  * Reintroduce package (Closes: #785897)
 
- -- exaile <exaile-devel@googlegroups.com>  <#TIMESTAMP#>
+ -- luzip665 <luzip665@posteo.de>  <#TIMESTAMP#>
