--- a/launchpad/current_head/changelog
+++ b/launchpad/current_head/changelog
@@ -1,5 +1,6 @@
 <#PKG_NAME#> (<#VERSION#>) <#UBUNTU_RELEASE#>; urgency=low
 
   * (almost) daily release of the current head
+  * to get a real changelog see https://github.com/exaile/exaile/commits/master
 
  -- js <exaile-users@googlegroups.com>  <#TIMESTAMP#>
