--- a/launchpad/current_stable/changelog
+++ b/launchpad/current_stable/changelog
@@ -1,5 +1,6 @@
 exaile (<#VERSION#>) bionic; urgency=low
 
   * Beta release for Exaile 4.1.3
+  * For a full changelog see https://github.com/exaile/exaile/wiki/Exaile-4.1-release-notes
 
  -- js <exaile-users@googlegroups.com>  <#TIMESTAMP#>
