--- a/debian/current_stable/changelog
+++ b/debian/current_stable/changelog
@@ -6,3 +6,9 @@ exaile (<#VERSION#>) unstable; urgency=low
   * Bugfix: Adding of unsupported file types will be prevented
 
  -- luzip665 <luzip665@posteo.de>  <#TIMESTAMP#>
+
+exaile (4.1.3~beta3+dfsg-1) unstable; urgency=low
+
+  * Reintroduce package (Closes: #785897, #1012202)
+
+ -- luzip665 <luzip665@posteo.de>  Tue, 25 Apr 2023 16:22:44 +0200
