--- a/debian/current_stable/changelog
+++ b/debian/current_stable/changelog
@@ -1,11 +1,17 @@
-exaile (<#VERSION#>) unstable; urgency=low
+exaile (4.1.3+dfsg-2) unstable; urgency=low
+
+  * Adding explicit dependencies for gir1.2-girepository-2.0 and other typelibs (Closes: #1059625)
+
+ -- luzip665 <luzip665@posteo.de>  Sat, 30 DEC 2023 12:32:16 +0200
+
+exaile (4.1.3+dfsg-1) unstable; urgency=low
 
   * Adding support for tagging aac files with id3 tags
   * Change flac/ogg metadata handling for bpm and comment
   * Adding a message window to inform about changes regarding the tagging
   * Bugfix: Adding of unsupported file types will be prevented
 
- -- luzip665 <luzip665@posteo.de>  <#TIMESTAMP#>
+ -- luzip665 <luzip665@posteo.de>  Sun, 13 Aug 2023 12:32:16 +0200
 
 exaile (4.1.3~beta3+dfsg-1) unstable; urgency=low
 
