--- a/debian/current_stable/changelog
+++ b/debian/current_stable/changelog
@@ -1,3 +1,9 @@
+exaile (4.1.3+dfsg-3) unstable; urgency=low
+
+  * Removing direct dependency to libgtk-3-0 (Closes: #1067175)
+
+ -- luzip665 <luzip665@posteo.de>  Sat, 23 MAR 2024 12:32:16 +0200
+
 exaile (4.1.3+dfsg-2) unstable; urgency=low
 
   * Adding explicit dependencies for gir1.2-girepository-2.0
