--- a/debian/current_stable/changelog
+++ b/debian/current_stable/changelog
@@ -1,3 +1,9 @@
+exaile (4.1.3+dfsg-4) unstable; urgency=low
+
+  * Removing usage of sunau module
+
+ -- luzip665 <luzip665@posteo.de>  Sat, 16 NOV 2024 12:32:16 +0200
+
 exaile (4.1.3+dfsg-3) unstable; urgency=low
 
   * Removing direct dependency to libgtk-3-0 (Closes: #1067175)
