--- a/debian/current_stable/changelog
+++ b/debian/current_stable/changelog
@@ -1,6 +1,6 @@
 exaile (4.1.3+dfsg-4) unstable; urgency=low
 
-  * Removing usage of sunau module
+  * Removing usage of sunau module (Closes: #1084721)
 
  -- luzip665 <luzip665@posteo.de>  Sat, 16 NOV 2024 12:32:16 +0200
 
